--- a/sandbox.client/front/ts/app/client_info_form/client_info_form.component.html
+++ b/sandbox.client/front/ts/app/client_info_form/client_info_form.component.html
@@ -37,7 +37,7 @@
               </span>
             </label>
             <div class="contain">
-              <input #valid_input [(ngModel)]="clientToSave.surname" class="custom-input valid_input" id="surname" name="valid_input" type="text" placeholder="Фамилия" pattern="[a-zA-Z_]*" required>
+              <input (keyup)="serializeInputText(1)" [(ngModel)]="clientToSave.surname" class="custom-input valid_input" id="surname" name="valid_input" type="text" placeholder="Фамилия" pattern="[a-zA-Z_]*" required>
               <span class="validity">
               </span>
             </div>
@@ -50,7 +50,7 @@
               </b>
               <span class="red-text">*</span></label>
             <div class="contain">
-              <input #valid_input [(ngModel)]="clientToSave.name" class="custom-input valid_input"  id="name" type="text" name="valid_input" placeholder="Имя" pattern="[a-zA-Z_]*" required>
+              <input (keyup)="serializeInputText(0)" [(ngModel)]="clientToSave.name" class="custom-input valid_input"  id="name" type="text" name="valid_input" placeholder="Имя" pattern="[a-zA-Z_]*" required>
               <span class="validity">
               </span>
             </div>
@@ -65,7 +65,7 @@
               </b>
             </label>
             <div class="contain">
-              <input [(ngModel)]="clientToSave.patronymic" class="custom-input" id="patronymic" type="text" placeholder="Отчество" required>
+              <input (keyup)="serializeInputText(2)" [(ngModel)]="clientToSave.patronymic" class="custom-input" id="patronymic" type="text" placeholder="Отчество" required>
             </div>
           </td>
 
@@ -124,8 +124,6 @@
                   {{charm.name}}
                 </option>
               </select>
-              <span class="validity">
-              </span>
             </div>
           </td>
         </tr>
@@ -141,17 +139,17 @@
               </span>
             </label>
             <div class="contain">
-              <input [(ngModel)]="clientToSave.addressReg.street" class="custom-input valid_input" id="ra_street" type="text" name="valid_input" placeholder="Улица" pattern="[a-zA-Z0-9_]*" required>
+              <input [(ngModel)]="clientToSave.addressReg.street" class="custom-input valid_input" id="ra_street" type="text" name="valid_input" placeholder="Улица" pattern="[a-zA-Z0-9_]+" required>
               <span class="validity">
               </span>
             </div>
             <div class="contain">
-              <input [(ngModel)]="clientToSave.addressReg.house" class="custom-input valid_input" id="ra_house" type="text" name="valid_input" placeholder="Дом" pattern="[a-zA-Z0-9_]*" required>
+              <input [(ngModel)]="clientToSave.addressReg.house" class="custom-input valid_input" id="ra_house" type="text" name="valid_input" placeholder="Дом" pattern="[a-zA-Z0-9_]+" required>
               <span class="validity">
               </span>
             </div>
             <div class="contain">
-              <input [(ngModel)]="clientToSave.addressReg.flat" class="custom-input valid_input" id="ra_flat" type="text" name="valid_input" placeholder="Квартира" pattern="[a-zA-Z0-9_]*" required>
+              <input [(ngModel)]="clientToSave.addressReg.flat" class="custom-input valid_input" id="ra_flat" type="text" name="valid_input" placeholder="Квартира" pattern="[a-zA-Z0-9_]+" required>
               <span class="validity">
               </span>
             </div>
@@ -186,17 +184,17 @@
         <tr>
           <td>
             <div class="contain">
-              <input [(ngModel)]="clientToSave.homePhone.number" class="custom-input valid_input" id="home_phone" type="text" name="valid_input" placeholder="Домашний" pattern="[0-9]{8}[0-9]*" required>
+              <input (keyup)="serializeInputNumber(0)" [(ngModel)]="clientToSave.homePhone.number" class="custom-input valid_input" id="home_phone" type="text" name="valid_input" placeholder="Домашний" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" maxlength="15" required>
               <span class="validity">
               </span>
             </div>
             <div class="contain">
-              <input [(ngModel)]="clientToSave.workPhone.number" class="custom-input valid_input" id="work_phone" type="text" name="valid_input" placeholder="Рабочий" pattern="[0-9]{8}[0-9]*" required>
+              <input (keyup)="serializeInputNumber(1)" [(ngModel)]="clientToSave.workPhone.number" class="custom-input valid_input" id="work_phone" type="text" name="valid_input" placeholder="Рабочий" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" maxlength="15" required>
               <span class="validity">
               </span>
             </div>
             <div class="contain">
-              <input [(ngModel)]="clientToSave.mobilePhone.number" class="custom-input valid_input" id="mobile_phone1" type="text" name="valid_input" placeholder="Мобильный" pattern="[0-9]{8}[0-9]*" required>
+              <input (keyup)="serializeInputNumber(2)" [(ngModel)]="clientToSave.mobilePhone.number" class="custom-input valid_input" id="mobile_phone1" type="text" name="valid_input" placeholder="Мобильный" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" maxlength="15" required>
               <span class="validity">
               </span>
             </div>
