--- a/sandbox.client/front/ts/app/clients_list_form/clients_list_form.component.html
+++ b/sandbox.client/front/ts/app/clients_list_form/clients_list_form.component.html
@@ -116,23 +116,23 @@
             ...
           </button>
         </td>
-      </tr>
-
+    </tr>
     </tbody>
     <tfoot>
-
       <tr>
-
         <td colspan="8" style="background: #e9e9e9">
           <div class="pagination custom-button">
-            <button class="no-select" style="float: right;" (click)="filterPage()">
+            <button class="no-select" style="float: right; height: 48px" (click)="editClientButtonClicked(null)">
+              +
+            </button>
+            <button class="no-select" style="float: right; height: 48px" (click)="filterPage()">
               Поиск
             </button>
-            <input #searchInput id="searchInput" type="text" placeholder="Поиск..">
+            <input #searchInput id="searchInput" type="text" style="height: 48px" placeholder="Поиск..">
           </div>
 
-          <div class="float_center" *ngIf="pagesCount()>1">
-            <div class="pagination">
+          <div class="float_center">
+            <div *ngIf="pagesCount()>1" class="pagination">
               <li>
                 <span class="no-select" (click)="pageChanged(currentPage-1)" [hidden]="currentPage<=1">&lt;PREV</span>
               </li>
@@ -169,9 +169,10 @@
                 </span>
               </li>
             </div>
-
+            <label>
+              Общее колчество клиентов - {{clientRecordsCount}}
+            </label>
           </div>
-
           <div style="float: right;">
             <select [(ngModel)]="numberOfItemInPage" class="pagination selector" (change)="loadClientRecordsList(currentPage)">
               <option *ngFor="let i of range(10, 31, 10)" value="{{i}}">
@@ -179,11 +180,8 @@
               </option>
             </select>
           </div>
-
         </td>
-
       </tr>
-
     </tfoot>
   </table>
 </div>
